--- a/src/assets/kongponents-theme.scss
+++ b/src/assets/kongponents-theme.scss
@@ -42,7 +42,9 @@
 }
 
 .k-skeleton-container {
-  .skeleton-table-row, .skeleton-loader {
+
+  .skeleton-table-row,
+  .skeleton-loader {
     .box {
       background: linear-gradient(-70deg, var(--section_colors-accent) 0%, var(--section_colors-accent) 40%, var(--section_colors-body) 50%, var(--section_colors-accent) 60%, var(--section_colors-accent) 100%) repeat;
       background-size: 400% 100%;
@@ -53,16 +55,18 @@
 
 
 .k-button.secondary {
-  border-color: var(--KButtonSecondaryBorder,var(--black-10,rgba(0,0,0,.1))) !important;
+  border-color: var(--KButtonSecondaryBorder, var(--black-10, rgba(0, 0, 0, .1))) !important;
   color: var(--text_colors-primary) !important;
 
-  &:hover, &:active, &:hover:not(:disabled) {
-    border-color: var(--KButtonSecondaryHoverBorder,var(--black-45,rgba(0,0,0,.45))) !important;
+  &:hover,
+  &:active,
+  &:hover:not(:disabled) {
+    border-color: var(--KButtonSecondaryHoverBorder, var(--black-45, rgba(0, 0, 0, .45))) !important;
     background-color: var(--KButtonSecondaryBase) !important;
-  }  
+  }
 
   &:focus {
-    box-shadow: 0 0 0 2px var(--white,#fff),0 0 0 4px var(--KButtonSecondaryHoverBorder,var(--blue-500,#1155cb)) !important;
+    box-shadow: 0 0 0 2px var(--white, #fff), 0 0 0 4px var(--KButtonSecondaryHoverBorder, var(--blue-500, #1155cb)) !important;
   }
 }
 
@@ -90,7 +94,10 @@
 .toaster-item .k-alert {
   color: var(--text_colors-primary) !important;
   background-color: var(--section_colors-tertiary) !important;
-  svg path { fill: var(--text_colors-primary) !important; }
+
+  svg path {
+    fill: var(--text_colors-primary) !important;
+  }
 }
 
 .k-modal {
@@ -99,15 +106,16 @@
   }
 }
 #app .k-button {
+
   &:disabled,
   &[disabled] {
-  opacity: .3;
-  cursor: not-allowed;
+    opacity: .3;
+    cursor: not-allowed;
     color: var(--button_colors-primary-text) !important;
     background-color: var(--button_colors-primary-fill) !important;
 
-  &:hover {
-    opacity: .3;
+    &:hover {
+      opacity: .3;
     }
   }
 }
