--- a/src/assets/kongponents-theme.scss
+++ b/src/assets/kongponents-theme.scss
@@ -5,6 +5,7 @@
   --KInputBorder: var(--section_colors-stroke);
   --KInputColor: var(--text_colors-primary);
   --KInputLabelColor: var(--text_colors-secondary);
+  --KInputPlaceholderColor: var(--text_colors-secondary);
   --KButtonSecondaryBase: var(--section_colors-body);
   --KButtonSecondaryBorder: var(--section_colors-stroke);
   --KButtonSecondaryHoverBorder: var(--text_colors-secondary);
@@ -16,7 +17,7 @@
   --KPaginationColor: var(--text_colors-link);
   --KPaginationDisabledColor: var(--text_colors-secondary);
   --KPaginationActiveColor: var(--text_colors-link);
-  --KPaginationBackgroundColor:	var(--section_colors-body);
+  --KPaginationBackgroundColor: var(--section_colors-body);
   --KPaginationBorderColor: var(--section_colors-stroke);
   --KPaginationActiveBackgroundColor: var(--section_colors-accent);
   --KPaginationActiveBorderColor: var(--section_colors-stroke);
@@ -41,7 +42,9 @@
 }
 
 .k-skeleton-container {
-  .skeleton-table-row, .skeleton-loader {
+
+  .skeleton-table-row,
+  .skeleton-loader {
     .box {
       background: linear-gradient(-70deg, var(--section_colors-accent) 0%, var(--section_colors-accent) 40%, var(--section_colors-body) 50%, var(--section_colors-accent) 60%, var(--section_colors-accent) 100%) repeat;
       background-size: 400% 100%;
@@ -52,16 +55,18 @@
 
 
 .k-button.secondary {
-  border-color: var(--KButtonSecondaryBorder,var(--black-10,rgba(0,0,0,.1))) !important;
+  border-color: var(--KButtonSecondaryBorder, var(--black-10, rgba(0, 0, 0, .1))) !important;
   color: var(--text_colors-primary) !important;
 
-  &:hover, &:active, &:hover:not(:disabled) {
-    border-color: var(--KButtonSecondaryHoverBorder,var(--black-45,rgba(0,0,0,.45))) !important;
+  &:hover,
+  &:active,
+  &:hover:not(:disabled) {
+    border-color: var(--KButtonSecondaryHoverBorder, var(--black-45, rgba(0, 0, 0, .45))) !important;
     background-color: var(--KButtonSecondaryBase) !important;
-  }  
+  }
 
   &:focus {
-    box-shadow: 0 0 0 2px var(--white,#fff),0 0 0 4px var(--KButtonSecondaryHoverBorder,var(--blue-500,#1155cb)) !important;
+    box-shadow: 0 0 0 2px var(--white, #fff), 0 0 0 4px var(--KButtonSecondaryHoverBorder, var(--blue-500, #1155cb)) !important;
   }
 }
 
@@ -89,7 +94,10 @@
 .toaster-item .k-alert {
   color: var(--text_colors-primary) !important;
   background-color: var(--section_colors-tertiary) !important;
-  svg path { fill: var(--text_colors-primary) !important; }
+
+  svg path {
+    fill: var(--text_colors-primary) !important;
+  }
 }
 
 .k-modal {
@@ -97,13 +105,18 @@
     background: var(--section_colors-body) !important;
   }
 }
+#app .k-button {
 
-.k-button:disabled, .kbutton[disabled] {
-  opacity: .3;
-  cursor: not-allowed;
-
-  &:hover {
+  &:disabled,
+  &[disabled] {
     opacity: .3;
+    cursor: not-allowed;
+    color: var(--button_colors-primary-text) !important;
+    background-color: var(--button_colors-primary-fill) !important;
+
+    &:hover {
+      opacity: .3;
+    }
   }
 }
 
@@ -139,14 +152,12 @@
 
 }
 
-// Fix for centred modal for now 
-// TODO: figure out better solution or adjust all modals
 .k-modal .k-modal-content .k-modal-body.content-centered {
   margin-left: initial !important;
   margin-right: initial !important;
 }
 
-// TODO: Discuss if needed
+
 .k-button {
   font-weight: 400 !important;
 }
