--- a/src/main.css
+++ b/src/main.css
@@ -40,6 +40,14 @@ a {
   color: var(--text_colors-link);
 }
 
+.hero-box {
+  background-color: rgba(0,0,0,.7);;
+  color: var(--text_colors-hero);
+  margin: 1em;
+  padding: 1em;
+  text-align: center;
+}
+
 [id] {
   scroll-margin-top: calc(var(--headerHeight) + 12px);
 }
