--- a/src/main.css
+++ b/src/main.css
@@ -1,13 +1,21 @@
+/* stylelint-disable-next-line scss/at-rule-no-unknown */
 @tailwind base;
+/* stylelint-disable-next-line scss/at-rule-no-unknown */
 @tailwind components;
+/* stylelint-disable-next-line scss/at-rule-no-unknown */
 @tailwind utilities;
 
 /* set portal theming values */
 :root {
   --headerHeight: 55px;
-  --font-family-sans: var(--font-base), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --font-family-headings: var(--font-headings), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --font-family-mono: var(--font-code), "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+  --font-family-sans: var(--font-base), -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family-headings: var(--font-headings), -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family-mono: var(--font-code), "Courier New", Courier,
+    "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
 }
 
 html {
@@ -15,17 +23,24 @@ html {
 }
 
 body {
-  color: var(--text_colors-primary);
   background-color: var(--section_colors-body);
-  font-family: var(--font-family-sans)
+  color: var(--text_colors-primary);
+  font-family: var(--font-family-sans);
 }
-pre,code,kbd {
+pre,
+code,
+kbd {
   font-family: inherit;
   font-family: var(--font-family-mono);
 }
-h1, h2, h2, h3, h4, h5, h6 {
-  font-family: var(--font-family-headings);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: var(--text_colors-headings);
+  font-family: var(--font-family-headings);
 }
 .base-font {
   font-family: var(--font-family-sans) !important;
