style(input): apply not-allowed cursor to disabled k-input inner

--- a/src/assets/kongponents-theme.scss
+++ b/src/assets/kongponents-theme.scss
@@ -121,6 +121,10 @@
   }
 }
 
+#app input.k-input:disabled {
+  cursor: not-allowed;
+}
+
 .kong-card .k-card-content div.k-card-body {
   font-size: 16px;
   line-height: 24px;
