--- a/src/assets/kongponents-theme.scss
+++ b/src/assets/kongponents-theme.scss
@@ -1,6 +1,7 @@
 :root {
   --KInputBackground: var(--section_colors-tertiary);
   --KInputReadonlyBackground: var(--section_colors-tertiary);
+  --KInputDisabledBackground: var(--section_colors-tertiary);
   --KInputSelectBackground: var(--section_colors-tertiary);
   --KInputBorder: var(--section_colors-stroke);
   --KInputColor: var(--text_colors-primary);
@@ -22,6 +23,9 @@
   --KPaginationActiveBackgroundColor: var(--section_colors-accent);
   --KPaginationActiveBorderColor: var(--section_colors-stroke);
   --KPaginationPageSizeColor: var(--text_colors-link);
+  --KTruncateCollapseIconColor: var(--button_colors-primary-text);
+  --KTruncateCollapseBackground: var(--button_colors-primary-fill);
+  --KTruncateToggleColor: var(--button_colors-primary-fill);
 }
 
 .card-pagination-bar {
@@ -118,6 +122,10 @@
       opacity: .3;
     }
   }
+}
+
+#app input.k-input:disabled {
+  cursor: not-allowed;
 }
 
 .kong-card .k-card-content div.k-card-body {
